# mes-pr-review-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  llm_client.py  loop.py  models.py  reasoning_protocol.py
app/github/: app_auth.py  client.py  webhooks.py
app/prompts/: __init__.py  assembler.py  default_layers.py  session.py
app/review/: __init__.py  notes.py  pr_context.py  publisher.py  schema.py  service.py  trace.py  validator.py
app/state_machine/: __init__.py  states.py  transitions.py
app/storage/: runs.py
app/tools/: __init__.py  registry.py  review_tools.py
docs/: demo_script.md  eval_pipeline.md  github_app_setup.md  local_demo.md
eval/: __init__.py  build_dataset.py  golden_dataset_mes.json  mes_filtered_dataset.json  phase1_data_prep.py  phase2_mock_runner.py  phase3_metrics.py
tests/: test_config.py  test_finding_validation.py  test_pr_context_tools.py  test_publisher.py  test_reasoning_protocol.py  test_review_service.py  test_state_machine.py  test_webhook.py
